--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,4 +1,4 @@
-/* Sticky footer styles
+/* Custom styles
 -------------------------------------------------- */
 html {
   box-sizing: border-box;
@@ -52,11 +52,113 @@ figcaption {
   text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.5);
 }
 
-.recipe img{ width: 400px; }
+.recipe img {
+  border-radius: 4px;
+  width: 400px;
+}
 
-.dropdown-menu { background-color: #e5e5e5; }
+.carousel {
+  margin-top: 2px;
+  margin-bottom: 60px;
+}
 
-.dropdown-menu li { align: left; }
+.carousel-desc {
+  text-align: center;
+}
+
+.carousel-inner img {
+  width: 100%;
+  max-height: 750px;
+  margin: 1px auto 1px auto;
+  object-fit: contain;
+  border-radius: 4px;
+}
+
+.carousel-indicators {
+  bottom:-8px;
+}
+.carousel-indicators .active {
+  background-color: #2980b9;
+}
+
+.carousel-inner .item .fill {
+  background-color: #fefefe;
+  border-radius: 4px;
+  box-shadow:0 0 8px rgba(0,0,0,0.25);
+  border: 1px solid #ddd; /* Add a grey border */
+}
+
+span.fa.fa-chevron-left, span.fa.fa-chevron-right {
+  position: absolute;
+  top: 50%;
+  font-size: 25px;
+}
+
+span.fa.fa-chevron-left {
+  left: 5%;
+}
+
+span.fa.fa-chevron-right {
+  right: 5%;
+}
+
+.avatar img {
+  margin: 10 40 10 40; /* Centered */
+  max-height: 200px;
+  width: auto;
+  border: 4px solid #ddd; /* Add a grey border */
+  border-radius: 4px;
+}
+
+/* Navbar collapsed on mobile, except tablets in landscape */
+@media screen and (max-width: 1023px) {
+  .main {
+    padding-right: 40px;
+    padding-left: 40px;
+  }
+    .navbar-header {
+        float: none;
+        padding: 0;
+    }
+    .navbar-left,.navbar-right {
+        float: none !important;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-fixed-top {
+        top: 0;
+        border-width: 0 0 1px;
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        padding: 0;
+    }
+    .navbar-nav>li {
+        float: none;
+        width: 50%;
+        border-top: 1px solid;
+        background-color: #e5e5e5;
+    }
+    .collapse.in{
+        display:block !important;
+    }
+}
+
+.dropdown-menu {
+  background-color: #e5e5e5;
+}
+
+.dropdown-menu li {
+  align: left;
+}
 
 /* Layout for phones */
 @media (max-width: 414px) {
@@ -66,12 +168,15 @@ figcaption {
     width: 100%;
     max-width: 100%;
   }
+  span.fa.fa-chevron-left, span.fa.fa-chevron-right {
+    font-size: 15px;
+  }
   .carousel {
-    height: 350px;
+    max-height: 350px;
   }
   .carousel-inner img {
     width: auto;
-    height: 350px;
+    max-height: 350px;
   }
   .gal {
     -webkit-column-count: 1; /* Chrome, Safari, Opera */
@@ -88,11 +193,14 @@ figcaption {
     width: 100%;
     max-width: 100%;
   }
+  span.fa.fa-chevron-left, span.fa.fa-chevron-right {
+    font-size: 20;
+  }
   .carousel {
-    height: 550px;
+    max-height: 550px;
   }
   .carousel-inner img {
-    height: 550px;
+    max-height: 550px;
   }
   .gal {
     -webkit-column-count: 2; /* Chrome, Safari, Opera */
@@ -249,48 +357,6 @@ th {
   height: 40px;
   background-color: #e5e5e5;
 }
-
-@media (max-width: 900px) {
-  .main {
-    padding-right: 40px;
-    padding-left: 40px;
-  }
-    .navbar-header {
-        float: none;
-        padding: 0;
-    }
-    .navbar-left,.navbar-right {
-        float: none !important;
-    }
-    .navbar-toggle {
-        display: block;
-    }
-    .navbar-collapse {
-        border-top: 1px solid transparent;
-        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
-    }
-    .navbar-fixed-top {
-        top: 0;
-        border-width: 0 0 1px;
-    }
-    .navbar-collapse.collapse {
-        display: none!important;
-    }
-    .navbar-nav {
-        float: none!important;
-        padding: 0;
-    }
-    .navbar-nav>li {
-        float: none;
-        width: 50%;
-        border-top: 1px solid;
-        background-color: #e5e5e5;
-    }
-    .collapse.in{
-        display:block !important;
-    }
-}
-
 
 /* Custom page CSS
 -------------------------------------------------- */
@@ -518,24 +584,63 @@ button.accordion.active:after {
 }
 
 .panel {
-    padding: 0px;
-    margin: 0px;
-    background-color: #eff;
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.2s ease-out;
+  padding: 0px;
+  margin: 0px;
+  background-color: #eff;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
 }
 
 .modal-header, h4, .close {
-    background-color: #f9f9f9;
-    text-align: center;
-    font-size: 15 px;
+  background-color: #f9f9f9;
+  text-align: center;
+  font-size: 15 px;
 }
 .modal-title, h4, .close {
-    background-color: #f9f9f9;
-    text-align: center;
-    font-size: 15 px;
+  background-color: #f9f9f9;
+  text-align: center;
+  font-size: 15 px;
 }
 .modal-footer {
-    background-color: #f9f9f9;
+  background-color: #f9f9f9;
 }
+
+/* Add Animation - Zoom in the Modal */
+.modal-content, .modal-caption {
+  animation-name: zoom;
+  animation-duration: 0.6s;
+}
+
+@keyframes zoom {
+  from {transform:scale(0)}
+  to {transform:scale(1)}
+}
+
+.modal-close {
+  position: absolute;
+  z-index: 2;
+  top: 45px;
+  right: 10px;
+  color: #a1a1a1;
+  font-size: 30px;
+  transition: 0.3s;
+}
+.modal-close:hover,
+.modal-close:focus {
+  color: #c0c0c0;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+img.hover-shadow {
+  transition: 0.3s
+}
+
+.hover-shadow:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
+}
+.slide-wrapper {
+  margin-top: 10px;
+}
+
