--- a/templates/register.html
+++ b/templates/register.html
@@ -30,7 +30,7 @@
   </p>
   <p>
   <i class="fa fa-key fa-fw"></i>
-  {{ form.confirm(id="confirm", title="Please confirm your password.", placeholder="Confmrm password", pattern="(?=^.{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$", required=True) }}
+  {{ form.confirm(id="confirm", title="Please confirm your password.", placeholder="Confirm password", pattern="(?=^.{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$", required=True) }}
   </p>
   <p>
   <i class="fa fa-ticket fa-fw"></i>
