--- a/templates/layout.html
+++ b/templates/layout.html
@@ -56,9 +56,9 @@
         <div class="col-sm-5">
           <div class="footer-widget-social">
             &nbsp;<a data-toggle="tooltip" title="Back to top" href="#top"><i class="fa fa-chevron-up fa-lg"></i></a>
-            &nbsp;<a data-toggle="tooltip" title="Facebook" href="https://facebook.com"><i class="fa fa-facebook-square fa-lg"></i></a>
+            &nbsp;<a data-toggle="tooltip" title="Facebook" href="https://www.facebook.com/profile.php?id=100010570596502"><i class="fa fa-facebook-square fa-lg"></i></a>
             &nbsp;<a data-toggle="tooltip" title="Github" href="https://github.com/cyberfrosty"><i class="fa fa-github-square fa-lg"></i></a>
-            &nbsp;<a data-toggle="tooltip" title="Linkedin" href="https://www.linkedin.com/alan"><i class="fa fa-linkedin-square fa-lg"></i></a>
+            &nbsp;<a data-toggle="tooltip" title="Linkedin" href="https://www.linkedin.com/in/alan-frost-2836584/"><i class="fa fa-linkedin-square fa-lg"></i></a>
             &nbsp;<a data-toggle="tooltip" title="Pinterest" href="https://pinterest.com/frostyalan"><i class="fa fa-pinterest-square fa-lg"></i></a>
             &nbsp;<a data-toggle="tooltip" title="Twitter" href="https://twitter.com/frostyalan"><i class="fa fa-twitter-square fa-lg"></i></a>
           </div>
