--- a/queensofgoodness/static/css/custom.css
+++ b/queensofgoodness/static/css/custom.css
@@ -12,7 +12,7 @@ html {
 
 body {     
 /*  background: #ffc909; */
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 16px;
   font-weight: 400;
   padding-top: 70px;
@@ -35,9 +35,9 @@ body {
 }
 
 h4.bolder {
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 20px;
-  font-weight: 700;
+  font-weight: 500;
 }
 
 .row {
@@ -45,9 +45,8 @@ h4.bolder {
 }
 
 footer {
-/*  background: #f1dfc5; */
-  font-family: 'Rubik', sans-serif;
-  font-size: 13px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
   font-weight: 500;
 
 /*
@@ -69,7 +68,22 @@ background-size: 40px 60px;
 }
 
 .footer-link:hover {
-    color: #0d6efd;
+    color: #8192fe;
+}
+
+.learn-more {
+  text-decoration: none;
+  display: inline-block;
+  padding: 6px 12px;
+  background-color: #004aad;
+  color: white;
+  border-radius: 4px;
+  vertical-align: bottom;
+}
+
+.learn-more:hover {
+  background-color: #e6a322;
+  color: #004aad;
 }
 
 .social-icon {
@@ -91,19 +105,19 @@ background-size: 40px 60px;
 
 .card {
   background-color: #f1dfc5;
-  font-family: 'Rubik Condensed', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
   color: #004aad;
   padding: 0px;
 }
 
 .card-header {
   font-size: 22px;
-  font-weight: 700;
+  font-weight: 600;
 }
 
 .card-title {
   font-size: 20px;
-  font-weight: 600;
+  font-weight: 500;
 }
 
 .card-img-top {
@@ -113,16 +127,41 @@ background-size: 40px 60px;
   object-position: 25% 50%; 
 }
 
+.lt-card {
+  background-color: #f1dfc5;
+}
+
+.bl-card {
+  background-color: #004aad;
+  color: white;
+}
+
 .tg-card {
   background-color: #e6a322;
 }
 
 .navbar {
   background: #e6a322;
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Roboto', sans-serif;
   padding-bottom: 4px;
+  color: #004aad;
 } 
-  
+
+.nav-link {
+  font-size: 18px;
+  font-weight: 500;
+  color: #004aad;
+}
+
+.nav-link:hover, .nav-link:focus {
+  color: #f1dfc5;
+}
+
+.navbar-light-icon {
+  border-color: #004aad;
+  color: #004aad;
+}
+
 .dropdown-menu {
   padding-top: 0px;
   padding-bottom: 0px;
@@ -150,6 +189,31 @@ background-size: 40px 60px;
 
 div.imagetiles { padding: 1px;}
 div.imagetiles div.col-lg-3.col-md-3.col-sm-3.col-xs-6{ padding: 5px;}
+
+.img-banner {
+  width: 100%; 
+  height: 200px; 
+  object-fit: cover;
+  border-radius: 14px;
+}
+
+@media only screen and (min-width: 768px) {
+  .img-banner {
+    height: 300px;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  .img-banner {
+    height: 400px;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .img-banner {
+    height: 500px;
+  }
+}
 
 .img-center {
   text-align: center; 
