--- a/queensofgoodness/static/css/custom.css
+++ b/queensofgoodness/static/css/custom.css
@@ -120,6 +120,12 @@ background-size: 40px 60px;
   font-weight: 500;
 }
 
+.card-body ul li {
+  font-size: 16px;
+  font-weight: 500;
+  padding: 5px;
+}
+
 .card-img-top {
   width: 100%; 
   height: 250px; 
@@ -138,6 +144,26 @@ background-size: 40px 60px;
 
 .tg-card {
   background-color: #e6a322;
+}
+
+.b-card {
+  background-color: #8192fe;
+}
+
+.e-card {
+  background-color: #d07ee3;
+}
+
+.g-card {
+  background-color: #a5d14a;
+}
+
+.l-card {
+  background-color: #ffda52;
+}
+
+.ps-card {
+  background-color: #ff761e;
 }
 
 .navbar {
