--- a/queensofgoodness/static/css/custom.css
+++ b/queensofgoodness/static/css/custom.css
@@ -78,7 +78,6 @@ background-size: 40px 60px;
   background-color: #004aad;
   color: white;
   border-radius: 4px;
-  vertical-align: bottom;
 }
 
 .learn-more:hover {
@@ -108,6 +107,16 @@ background-size: 40px 60px;
   font-family: 'Roboto Condensed', sans-serif;
   color: #004aad;
   padding: 0px;
+}
+
+.card-link:hover  {
+  color: #f1dfc5;
+}
+
+.card-link {
+  font-size: 22px;
+  font-weight: 600;
+  text-decoration: none;
 }
 
 .card-header {
@@ -218,9 +227,9 @@ div.imagetiles div.col-lg-3.col-md-3.col-sm-3.col-xs-6{ padding: 5px;}
 
 .img-banner {
   width: 100%; 
-  height: 200px; 
+  height: 220px; 
   object-fit: cover;
-  border-radius: 14px;
+  border-radius: 6px;
 }
 
 @media only screen and (min-width: 768px) {
@@ -239,6 +248,25 @@ div.imagetiles div.col-lg-3.col-md-3.col-sm-3.col-xs-6{ padding: 5px;}
   .img-banner {
     height: 500px;
   }
+}
+
+.img-hover img {
+    -webkit-transition: all .3s ease; /* Safari and Chrome */
+    -moz-transition: all .3s ease; /* Firefox */
+    -o-transition: all .3s ease; /* IE 9 */
+    -ms-transition: all .3s ease; /* Opera */
+    transition: all .3s ease;
+    overflow:hidden;
+}
+
+.img-hover img:hover {
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    -webkit-transform:translateZ(0) scale(1.04); /* Safari and Chrome */
+    -moz-transform:scale(1.04); /* Firefox */
+    -ms-transform:scale(1.04); /* IE 9 */
+    -o-transform:translatZ(0) scale(1.04); /* Opera */
+    transform:translatZ(0) scale(1.04);
 }
 
 .img-center {
