--- a/queensofgoodness/static/css/custom.css
+++ b/queensofgoodness/static/css/custom.css
@@ -176,6 +176,23 @@ background-size: 40px 60px;
   font-weight: 600;
 }
 
+.card-header-sm {
+  font-size: 20px;
+  font-weight: 600;
+}
+
+@media screen and (max-width: 768px) {
+  .card-header-sm {
+    font-size: 18px; /* Smaller font size */
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .card-header-sm {
+    font-size: 16px; /* Smaller font size */
+  }
+}
+
 .card-title {
   font-size: 20px;
   font-weight: 500;
