--- a/queensofgoodness/static/css/custom.css
+++ b/queensofgoodness/static/css/custom.css
@@ -381,10 +381,21 @@ div.imagetiles div.col-lg-3.col-md-3.col-sm-3.col-xs-6{ padding: 5px;}
 
 .img-center {
   text-align: center; 
-  border-radius: 4px;
+  border-radius: 6px;
   max-height: 500px;
   width: 100%; 
   object-fit: cover;
+  background-color: f1dfc5;
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.15), 0 2px 3px 0 rgba(0, 0, 0, 0.1);
+}
+
+.img-panel {
+  text-align: center;
+  border-radius: 6px;
+  max-height: 300px;
+  width: 100%;
+  object-fit: cover;
+  object-position: 25% 25%;
   background-color: f1dfc5;
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.15), 0 2px 3px 0 rgba(0, 0, 0, 0.1);
 }
@@ -420,6 +431,30 @@ div.imagetiles div.col-lg-3.col-md-3.col-sm-3.col-xs-6{ padding: 5px;}
   border-radius: 5px;
 }
 
+.overlay-text-cb {
+  position: absolute;
+  bottom: 3%;
+  left: 50%;
+  transform: translate(-50%, 0%);
+  text-align: center;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.3); /* Transparent background for text */
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.overlay-text-ct {
+  position: absolute;
+  top: 3%;
+  left: 50%;
+  transform: translate(-50%, 0%);
+  text-align: center;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.2); /* Transparent background for text */
+  padding: 10px;
+  border-radius: 5px;
+}
+
 .footer {
   border-top: 1px solid #004aad;
   position: absolute;
@@ -433,3 +468,30 @@ div.imagetiles div.col-lg-3.col-md-3.col-sm-3.col-xs-6{ padding: 5px;}
   font-size: 12px;
 } 
 
+.trifold {
+  display: flex;
+  flex-wrap: wrap; /* Allows panels to wrap to next line on smaller screens */
+  max-width: 1200px;  /* Example max width for a trifold */
+  margin: 0 auto;  /* Center the brochure */
+  box-sizing: border-box;
+  font-size: 18px;
+}
+
+.panel {
+  width: calc(100% / 3); /*  Three equal panels */
+  padding: 20px;
+  box-sizing: border-box; /* include padding in width */
+  border: 2px solid #e4ab34;
+}
+
+/* Media query for smaller screens to make panels stack vertically*/
+@media only screen and (max-width: 992px) {
+  .panel {
+    width: 50%;
+  }
+@media only screen and (max-width: 768px) {
+  .panel {
+    width: 100%;
+  }
+}
+}
