--- a/queensofgoodness/static/css/custom.css
+++ b/queensofgoodness/static/css/custom.css
@@ -347,7 +347,7 @@ div.imagetiles div.col-lg-3.col-md-3.col-sm-3.col-xs-6{ padding: 5px;}
 
 .img-banner {
   width: 100%; 
-  height: 220px; 
+  height: auto;
   object-fit: cover;
   border-radius: 6px;
 }
